# MF_Tire_GUI

./: .gitignore  CMakeLists.txt  MF1996_LongForce_calc.m  MF52_LongForce_calc.m  MF_Tire_GUI_V2a.m  README.md  license.txt  opt_fun.m  optimplotfval2.m  tire_data_lateral.yaml  tire_data_longitudinal.yaml
.github/workflows/: release_app.yml  run_tests.yml
src/: CMakeLists.txt  LabeledSlider.cpp  LabeledSlider.hpp  MainWindow.cpp  MainWindow.hpp  Parameters.hpp  RotatedLabel.cpp  RotatedLabel.hpp  main.cpp  mainwindow.ui
test/: CMakeLists.txt  test_LabeledSlider.cpp  test_MainWindow.cpp  test_RotatedLabel.cpp
